build: :green_heart: fix build to different cpu arch
try to use platforms arg on build step to build to arm64 and x86_64

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,3 +39,5 @@ jobs:
         with:
           push: true
           tags: lucasmol/ci-studies:latest
+          platforms: linux/amd64,linux/arm64
+          
